# min-rs-config

./: Cargo.toml  README.md
src/: lib.rs
