[package]
name = "min-rs-config"
version = "0.1.2"
edition = "2024"
license="MIT"
description="A library to read config file for min-rs crate."
authors = ["BadCoder"]
repository="https://github.com/Vova-max-png/min-rs-config"
keywords = ["max", "messenger", "config"]
exclude=["/target"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"